--- a/logo_korol.html
+++ b/logo_korol.html
@@ -3,8 +3,8 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<img src="logo_zadanie_15_korol.png" border=1 align=left>
-		<h1 align="center">Logo-Korol<br>Gdańsk, 18.01.2025</h1>
+		<img src="Logo_zadanie_15_Wlazło.png" border=1 align=left>
+		<h1 align="center">Logo-Wlazło<br>Gdańsk, 25.03.2025</h1>
 		<marquee bgcolor="red">Pozdrowienia</marquee>
 	</body>
 </html>
