--- a/logo_korol.html
+++ b/logo_korol.html
@@ -3,7 +3,7 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<img src="Logo_zadanie_15_Wlazło.png" border=1 align=left>
+		<img src="Logo_15_wlazło" border=1 align=left>
 		<h1 align="center">Logo-Wlazło<br>Gdańsk, 25.03.2025</h1>
 		<marquee bgcolor="red">Pozdrowienia</marquee>
 	</body>
